--- a/app/page.module.css
+++ b/app/page.module.css
@@ -3,8 +3,18 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
+  padding: 5%;
   min-height: 100vh;
+}
+
+.main h1 {
+  margin-bottom: 20px;
+  text-align: left;
+  align-self: flex-start;
+}
+
+.cartList {
+  width: 100%;
 }
 
 .description {
